{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "47f1f1f8-be89-4d6b-8119-d1b9933e0117",
            "actions": [
                {
                    "name": "Movement_hor",
                    "type": "Button",
                    "id": "9b852a90-f6c1-4b3c-a04c-e0fa00922f1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement_ver",
                    "type": "Button",
                    "id": "14768112-542b-4a0f-ab64-5b449f720c38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "38839c40-b80d-46f5-aecf-9a2d8823f69b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1b4c528e-8f4e-4dc1-b33f-f81eacac8aff",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef8a99a9-c726-4b41-ab75-407a52b912fe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "399d9a9a-a3e2-49f2-89bf-1329a1edc331",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "42546a02-193a-4e0c-8e5b-0cd673a95fad",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "54d55242-45b7-4ca1-ba9c-f32e1e124a81",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_hor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "e8e460be-9d4f-4d0d-9d94-49fd2afb381c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d7529600-3b1c-4706-aaa8-556dd174716d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8c645c5f-f432-410e-abee-0ba1c644e3e3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "4ab82d12-fb52-40e2-af6a-3ac441a60b81",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2c22416c-8f56-4355-a7f2-5eac382a93e4",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e18e4f07-ca12-4a19-a84e-ecb9a497066b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement_ver",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "LevelMenu",
            "id": "71eb166e-6c98-482d-ae99-37283ce6dbd3",
            "actions": [
                {
                    "name": "Play",
                    "type": "Button",
                    "id": "e5e214e5-7cdc-417a-9231-71d761f5a0e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42b5c754-4ee6-4ba9-8699-d01a03e0d85f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9b24157-f3ff-4704-b4dd-029a7832e746",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Play",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "0a22b030-e84f-409d-974d-8e434c92fd50",
            "actions": [
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "0172ce78-efa6-47ac-b1ca-b89675b19dec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "a85162a5-d5ab-4dc9-ab77-9a4a9324ee4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "efe63f3b-1841-4f09-92bb-e003589dd1ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a7b9875-c4ce-4d67-a3fd-df7186e54739",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57532c21-abe6-42ff-84dc-30ea4778c2c6",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c0d2f94-02ad-44f2-8290-372251c3c525",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cf7e093-497c-435d-a197-d943745c73d2",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f981d75-b05f-4b19-ad41-66d16ce313cf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cb5089b-d032-4b49-9c13-11cb988ebccb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}